fix(ctr): use proper overflow value
"clip" wasn't added until chrome 20

Fixes #264

--- a/apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
+++ b/apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
@@ -15,7 +15,7 @@ body {
 #body,
 #header,
 body {
-    overflow-x: clip
+    overflow-x: hidden;
 }
 
 #body {
